--- a/src/styles/PokemonModal.css
+++ b/src/styles/PokemonModal.css
@@ -36,8 +36,10 @@
   z-index: 1.5;
   background-color: #f5f3f4;
   border-radius: 50%;
+  cursor: pointer;
   padding: 1em;
   color: black;
+  font-weight: 600;
 }
 
 @media only screen and (max-width: 1200px) {
